# ufc-mn1-homework

./: CMakeLists.txt  README.md  compilar.bat  executar.bat  rodar_testes.bat
src/tarefa1/: main.cpp
src/trabalho1/: FuncoesMatematicas.h  TArvoreSintatica.h  TNoh.h  TParser.h  abb.h
test/: CMakeLists.txt  trabalho1_test.cpp
trabalho1/: main.cpp
